// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input component correct styles for input type password 1`] = `
<div>
  <div
    class="sc-bczRLJ dkamqk"
  >
    <input
      class="sc-gsnTZi hsxpLY"
      type="password"
      value=""
    />
    <img
      alt="closed eye"
      src="eye-slash.svg"
    />
  </div>
</div>
`;

exports[`input component correct styles for input type text 1`] = `
<div>
  <input
    class="sc-gsnTZi hsxpLY"
    value=""
  />
</div>
`;

exports[`input component correct styles of variant grey 1`] = `
<div>
  <input
    class="sc-gsnTZi fqhQFY"
    value=""
  />
</div>
`;

exports[`input component hide/show password by click on eye icon 1`] = `
<div>
  <div
    class="sc-bczRLJ dkamqk"
  >
    <input
      class="sc-gsnTZi hsxpLY"
      type="password"
      value=""
    />
    <img
      alt="closed eye"
      src="eye-slash.svg"
    />
  </div>
</div>
`;

exports[`input component hide/show password by click on eye icon 2`] = `
<div>
  <div
    class="sc-bczRLJ dkamqk"
  >
    <input
      class="sc-gsnTZi hsxpLY"
      value=""
    />
    <img
      alt="opened eye"
      src="eye.svg"
    />
  </div>
</div>
`;
